--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -8,21 +8,20 @@
 }
 
 body {
-  background-image: url(../../assets/BackgroundClean.jpg);
   display: flex;
   min-height: 100vh;
   position: relative;
   margin: 0;
 }
 
-body::before {
+.background-home::before {
   content: "";
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url(../../assets/BackgroundClean.jpg);
+  background-image: url(../../assets/BgHome.jpg);
   background-size: cover;
   background-position: center;
   filter: blur(6px); 
@@ -41,7 +40,7 @@ body::before {
 .section {
   width: 92vw;
   height: 92vh;
-  background-image: url(../../assets/BackgroundClean.jpg);
+  background-image: url(../../assets/BgHome.jpg);
   background-position: center top 20%;
   background-repeat: no-repeat;
   background-size: cover;
@@ -134,7 +133,7 @@ span {
   }
 
   .title-container {
-    margin-top: 85%;
+    margin-top: 50%;
   }
 
   h1 {
@@ -157,7 +156,7 @@ span {
   }
 
   .title-container {
-    margin-top: 50vh;
+    margin-top: 20%;
   }
 
   h1 {
@@ -179,7 +178,7 @@ span {
   }
 
   .title-container {
-    margin-top: 55vh;
+    margin-top: 40vh;
   }
 
   h1 {
