--- a/src/pages/Login/style.css
+++ b/src/pages/Login/style.css
@@ -10,18 +10,87 @@ body {
   min-height: 100vh;
   position: relative;
   margin: 0;
-  background-image: url(../../assets/BgLogin.jpg);
 }
 
-body::before {
+.background-login::before {
   content: "";
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+  background-image: url(../../assets/BgLogin.jpg);
   background-size: cover;
   background-position: center;
   filter: blur(6px); 
   z-index: -1; 
+}
+
+.section-container-login {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 4vh 4vw; 
+  min-height: 100vh; 
+  box-sizing: border-box;
+}
+
+.section-login {
+  display: flex;
+  width: 92vw;
+  height: 92vh;
+  background-image: url(../../assets/BgLogin.jpg);
+  background-position: center top 20%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 30px;
+  overflow: hidden;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.25);
+
+  display: flex;
+  flex-direction: column;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  transform-origin: center;
+}
+
+
+.section-login:hover {
+  transform: scale(1.01); 
+  box-shadow: 0 12px 25px rgba(0, 0, 0, 0.35);
+}
+
+.login {
+  display: flex;
+  width: 100%;
+  height: 80%;
+  border-radius: 20px;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.quadrado-login {
+  background-color: rgba(255, 255, 255, 0.25);
+  border-radius: 25px;
+  border: 2px solid white;
+  width: 40%;
+  height: 80%;
+  box-shadow: 0 12px 25px rgba(0, 0, 0, 0.35);
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+@media screen and (max-width: 660px) {
+  .quadrado-login{
+    width: 70%;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .quadrado-login{
+    width: 90%;
+  }
 }
